@@ -1,5 +1,13 @@
 2008-08-01  Neil Roberts  <neil@o-hand.com>
 
+	* clutter-gst/rbcltgstaudio.c: Add a 'playbin' method
+
+	* clutter-gst/extconf.rb: Require clutter-0.8 and clutter-gst-0.8
+
+	* examples/video-player.rb: Update to 0.8 API
+
+2008-08-01  Neil Roberts  <neil@o-hand.com>
+
 	* clutter-cairo/rbcluttercairo.c: Update to 0.8
 
 	* clutter-cairo/extconf.rb: Require version 0.8 of clutter and
